--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
 
     <string name="lbl_error">Oops! Something Went Wrong</string>
     <string name="lbl_error_description">We encountered an unexpected error. Please try again.</string>
+    <string name="total_goals_lbl">Total Goals</string>
+    <string name="total_shots_lbl">Total Shots</string>
+    <string name="total_minutes_lbl">Total minutes</string>
+    <string name="appearances_lbl">Appearances</string>
+    <string name="loading">Loading...</string>
+    <string name="no_info_player">There\'s no info about this player for this season</string>
+
+    <!-- Accessibility strings   -->
+    <string name="image_of_player">Image of player</string>
+    <string name="la_liga_season">La Liga - 2022</string>
 </resources>
